# AgroTerror

./: .gitignore  README.md
docs/: README.md  dnabert.md  frontend.md  gene-edit-service.md  graph-crispr.md  server.md
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  markdown-to-text.ts  react-compat.ts
frontend/types/: react-three-fiber.d.ts
microservices/Graph-CRISPR/: README.md  adjust_common.py  adjust_layers.py  adjust_model.py  config_117official.json  config_BE.json  config_WTset.json  dataset500.py  datasetBE.py  npy2tensor.py  predict500.py  predictWTwang.py  test.ipynb  trainandtestBE.py  trainandtestWT.py
microservices/gene_edit_service/: ARCHITECTURE.md  QUICKSTART.md  README.md  TESTING.md  config.py  demo_curl_commands.sh  demo_inputs.json  example_usage.py  main.py  models.py  pyproject.toml  requirements.txt  run.sh  test_optimizations.py  test_setup.bat  test_setup.sh
microservices/gene_edit_service/services/: __init__.py  bim_parser.py  dataset_manager.py  dnabert_service.py  graph_crispr_service.py  redis_cache.py
server/: .dockerignore  README.md  docker-compose.yml  main.py  pyproject.toml  run_server.bat  run_server.sh
server/core/: config.py  database.py  dependencies.py  rate_limit.py  redis.py  security.py
server/model/: llm_query.py  user.py
server/routers/: __init__.py  auth.py  gene_analysis.py  llm.py
server/schemas/: auth.py  gene_analysis.py  llm.py
server/services/: auth.py  cache.py  gemini.py  ollama.py
(+51 files in other folders)
